# Fleet_Management

./: Makefile  README.md
control-api/: go.mod  go.sum  main.go
control-api/grpc/: client.go
control-api/http/: handlers.go
control-api/proto/controlpb/: control.pb.go  control_grpc.pb.go
control-api/proto/metricspb/: metrics.pb.go
control-api/proto/vehiclepb/: vehicle.pb.go  vehicle_grpc.pb.go
control-api/types/: command.go
ingestion-server/: Cargo.toml  build.rs
ingestion-server/src/: main.rs
ingestion-server/src/grpc/: control_service.rs  metrics_service.rs  mod.rs  registry.rs  vehicle_service.rs
ingestion-server/src/metrics/: metrics_aggregator.rs  mod.rs
ingestion-server/src/pb/: mod.rs
ingestion-server/src/state/: mod.rs  state_store.rs  vehicle_state.rs
proto/: common.proto  control.proto  metrics.proto  vehicle.proto
vehicle-simulator/: go.mod  main.go
vehicle-simulator/fleet/: behavior.go  commands.go  connect.go  fleet.go  telemetry.go  vehicle.go
vehicle-simulator/proto/commonpb/: common.pb.go
vehicle-simulator/proto/controlpb/: control.pb.go  control_grpc.pb.go
vehicle-simulator/proto/metricspb/: metrics.pb.go  metrics_grpc.pb.go
vehicle-simulator/proto/vehiclepb/: vehicle.pb.go  vehicle_grpc.pb.go
