[package]
name = "ingestion-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tonic = "0.14.2"
tokio = {version = "1.47.1", features = ["full"]}
serde = {version ="1.0.219", features = ["derive"]}
serde_json = "1.0.143"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "macros"]}
dotenv = "0.15.0"
prost = "0.14.1"

[build-dependencies]
tonic-build = "0.14.2"
